Closed
Bug 1329293
Opened 4 years ago
Closed 4 years ago
Confusing error reported to console: "downloadable font: OS/2: adjusting Mac style (regular) ..."
Categories
(Core :: Graphics: Text, defect)
Tracking
()
RESOLVED
FIXED
mozilla53
Tracking | Status | |
---|---|---|
firefox53 | --- | fixed |
People
(Reporter: pushanshu25, Unassigned)
Details
(Whiteboard: [)
Attachments
(2 files)
141.89 KB,
image/png
|
Details | |
1.62 KB,
patch
|
jrmuizel
:
review+
|
Details | Diff | Splinter Review |
User Agent: Mozilla/5.0 (Windows NT 6.2) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/55.0.2883.87 Safari/537.36 Steps to reproduce: 1. Launch Firefox and open the Browser Console from menu [≡] → select Developer → select Browser Console. 2. Visit about:plugins and check for the version of Shockwave flash 3. Browse through websites that use the Flash Player plug-in and look for rendering, functional and performance issues. Actual results: error in console Expected results: no error in console
Severity: normal → critical
Component: Untriaged → Developer Tools: WebIDE
OS: Unspecified → Windows 8
Priority: -- → P1
Hardware: Unspecified → x86
Severity: critical → normal
Component: Developer Tools: WebIDE → Graphics: Text
Priority: P1 → --
Product: Firefox → Core
Comment 1•4 years ago
|
||
Is "plug-in" a better component to track this?
Component: Graphics: Text → Plug-ins
Whiteboard: [
Comment 2•4 years ago
|
||
The errors in the console don't appear to have anything to do with Flash. They are font parsing notifications from web content. I can't tell whether those are errors or warnings or what, which appears to be because the URLS are very long data: and therefore cut off the end of the message. "downloadable font: OS/2: adjusting Mac style (regular) ..." I don't know whether we can fix that by rearranging the message so that the complete message comes before the URL, or truncating the URL, or changing the display in the error console somewhat. But I'm going to move this to fonts first because I suspect that's the better option. http://searchfox.org/mozilla-central/rev/790b2cb423ea1ecb5746722d51633caec9bab95a/layout/style/FontFaceSet.cpp#1221
Component: Plug-ins → Graphics: Text
Summary: Web content that makes use of the Flash Player plug-in not able to properly loaded and rendered → Confusing error reported to console: "downloadable font: OS/2: adjusting Mac style (regular) ..."
Comment 3•4 years ago
|
||
That's a warning (rather than an error) generated by OTS, here: http://searchfox.org/mozilla-central/rev/790b2cb423ea1ecb5746722d51633caec9bab95a/gfx/ots/src/os2.cc#152 So the font data has internal inconsistencies that OTS is fixing up, but also reporting so that the author/font developer/whatever can be alerted to the fact that their font is not quite right. Offhand, I'm not sure where the truncation of the message happens; AFAICS, we should be getting the full URI when we call GetFamilyNameAndURIForLogging at http://searchfox.org/mozilla-central/rev/790b2cb423ea1ecb5746722d51633caec9bab95a/layout/style/FontFaceSet.cpp#1206, but it's clearly truncated in the screenshot attached. Which is probably just as well, considering that a data: URI could be huge... Perhaps we should truncate it within gfxUserFontEntry::GetFamilyNameAndURIForLogging itself. Probably center-truncation, so that we retain the beginning and end of a potentially over-long path, would be the most useful.
Comment 4•4 years ago
|
||
I'd suggest we just do something simple-minded like this.
Attachment #8827542 -
Flags: review?(jmuizelaar)
Updated•4 years ago
|
Attachment #8827542 -
Flags: review?(jmuizelaar) → review+
Comment 5•4 years ago
|
||
https://hg.mozilla.org/integration/mozilla-inbound/rev/02fc9d9b46a58d20270c5dba699e3eef56370b80 Bug 1329293 - Truncate overly long URIs in downloadable font error/warning messages. r=jrmuizel
Comment 6•4 years ago
|
||
bugherder |
https://hg.mozilla.org/mozilla-central/rev/02fc9d9b46a5
Status: UNCONFIRMED → RESOLVED
Closed: 4 years ago
status-firefox53:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla53
You need to log in
before you can comment on or make changes to this bug.
Description
•