Bug 1329293 - Truncate overly long URIs in downloadable font error/warning messages. r=jrmuizel